2006-11-11  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* src/DaqFakeReader.cc (fillFEDs): include <cmath> and change
	  log -> std::log and exp -> std::exp for slc4/gcc3.4.5 compliance.

2006-10-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* change interface of DaqBaseReader: pass a pointer reference (not
	a reference) to fillRawData() in order to allow for an allready
	existing collection to be passed. Traditional Readers will have to
	call data=new FEDRawDataCollection() within fillRawData().
	* adjust DaqFakeReader to the interface change above
	* adjust DaqSource to the interface change above
	* [EventFilter/FUReader *is* a DaqBaseReader and is adjusted as
	well!]
	
